# ofxVlc4

./: .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  addon_config.mk  vlc-full-help.txt  vlc-help.txt
.github/workflows/: fuzz.yml  tests.yml  windows-d3d11.yml
docs/: API_GUIDE.md  ARCHITECTURE.md  GL_WORKFLOW_MAP.md  MIGRATION_FROM_OFVIDEOPLAYER.md  RECORDING_PERFORMANCE.md  WINDOWS_D3D11_TESTING.md
ofxGgml/: LICENSE  README.md  addon_config.mk
ofxGgml/ofxGgmlExample/: Makefile
ofxGgml/ofxGgmlExample/src/: main.cpp  ofApp.cpp  ofApp.h
ofxGgml/ofxGgmlGuiExample/: Makefile  addons.make  config.make
ofxGgml/ofxGgmlGuiExample/src/: main.cpp  ofApp.cpp  ofApp.h
ofxGgml/ofxGgmlNeuralExample/: Makefile  addons.make
ofxGgml/ofxGgmlNeuralExample/src/: main.cpp  ofApp.cpp  ofApp.h
ofxGgml/src/: ofxGgml.h
ofxGgml/src/core/: ofxGgml.cpp  ofxGgml.h
ofxGgml/src/graph/: ofxGgmlGraph.cpp  ofxGgmlGraph.h
ofxGgml/src/support/: ofxGgmlHelpers.h  ofxGgmlTypes.h
ofxGgml/src/tensor/: ofxGgmlTensor.cpp  ofxGgmlTensor.h
ofxVlc4360Example/: README.md  addons.make  config.make  download-360-example-media.sh
ofxVlc4360Example/scripts/: download-360-example-media.sh
ofxVlc4360Example/src/: main.cpp  ofApp.cpp  ofApp.h
ofxVlc4EditorExample/: README.md
ofxVlc4EditorExample/src/: main.cpp  ofApp.cpp  ofApp.h
ofxVlc4Example/: README.md  addons.make  config.make
ofxVlc4Example/scripts/: download-projectm-assets.sh
ofxVlc4Example/src/: SimpleSrtSubtitleParser.h  main.cpp  ofApp.cpp  ofApp.h  ofVlcPlayer4Gui.cpp  ofVlcPlayer4Gui.h  ofVlcPlayer4GuiAudio.cpp  ofVlcPlayer4GuiAudio.h  ofVlcPlayer4GuiControls.h  ofVlcPlayer4GuiEqualizer.cpp  ofVlcPlayer4GuiEqualizer.h  ofVlcPlayer4GuiMedia.cpp  ofVlcPlayer4GuiMedia.h  ofVlcPlayer4GuiStyle.h  ofVlcPlayer4GuiVideo.cpp  ofVlcPlayer4GuiVideo.h  ofVlcPlayer4GuiVisualizer.cpp  ofVlcPlayer4GuiVisualizer.h  ofVlcPlayer4GuiWindows.cpp  ofVlcPlayer4GuiWindows.h
ofxVlc4MidiExample/: README.md  addons.make
ofxVlc4MidiExample/scripts/: download-arachno-soundfont.ps1
ofxVlc4MidiExample/src/: MidiAnalysis.h  main.cpp  ofApp.cpp  ofApp.h
ofxVlc4NleEditor/: README.md  addons.make  config.make
ofxVlc4NleEditor/src/: main.cpp  ofApp.cpp  ofApp.h
ofxVlc4QuickStart/: README.md  addons.make  config.make
ofxVlc4QuickStart/src/: ofApp.cpp  ofApp.h
ofxVlc4RecorderExample/: README.md
ofxVlc4RecorderExample/src/: RecorderApp.cpp  RecorderApp.h  main.cpp  ofApp.cpp  ofApp.h
scripts/: build-ggml.sh  download-360-example-media.ps1  download-360-example-media.sh  download-model.sh  install-libvlc.sh
src/: ofMain.h  ofxVlc4.h  ofxVlc4Audio.h  ofxVlc4Media.h  ofxVlc4Playback.h  ofxVlc4Player.h  ofxVlc4Types.h  ofxVlc4Utils.h  ofxVlc4Video.h
src/audio/: ofxVlc4Audio.cpp  ofxVlc4Audio.h  ofxVlc4Effects.cpp
src/core/: VlcCoreSession.cpp  VlcCoreSession.h  VlcEventCallbackPolicy.h  VlcEventRouter.cpp  VlcEventRouter.h  VlcHandleWrappers.h  ofxVlc4.cpp  ofxVlc4.h  ofxVlc4DiagnosticsState.h  ofxVlc4Impl.h  ofxVlc4InitArgsState.h  ofxVlc4Modules.cpp  ofxVlc4Modules.h  ofxVlc4Types.h
src/facade/: README.md  ofxVlc4SimplePlayer.cpp  ofxVlc4SimplePlayer.h  ofxVlc4SimpleRecorder.cpp  ofxVlc4SimpleRecorder.h
src/media/: MediaLibrary.cpp  MediaLibrary.h  MediaLibraryState.h  ofxVlc4Media.cpp  ofxVlc4Media.h  ofxVlc4MediaDialogs.cpp  ofxVlc4MediaDiscovery.cpp
src/midi/: ofxVlc4MidiAnalysis.cpp  ofxVlc4MidiAnalysis.h  ofxVlc4MidiBridge.cpp  ofxVlc4MidiBridge.h  ofxVlc4MidiPlayback.cpp  ofxVlc4MidiPlayback.h
src/nle/: NleClip.h  NleEditOps.h  NleEdlExport.h  NleSequence.h  NleTimecode.h  NleTrack.h  NleTrimOps.h  NleUndoStack.h
src/playback/: PlaybackController.cpp  PlaybackController.h  PlaybackTransportState.h  ofxVlc4Playback.cpp  ofxVlc4Playback.h  ofxVlc4PlaybackCommands.cpp  ofxVlc4PlaybackCommands.h
src/recording/: ofxVlc4Recorder.cpp  ofxVlc4Recorder.h
src/support/: ofxVlc4AudioHelpers.h  ofxVlc4CrashHandler.h  ofxVlc4GlOps.h  ofxVlc4MediaHelpers.h  ofxVlc4MediaLibraryHelpers.h  ofxVlc4MuxHelpers.h  ofxVlc4PlaylistHelpers.h  ofxVlc4RecordingHelpers.h  ofxVlc4RingBuffer.cpp  ofxVlc4RingBuffer.h  ofxVlc4Utils.h  ofxVlc4VideoHelpers.h
src/video/: ofxVlc4Video.cpp  ofxVlc4Video.h  ofxVlc4VideoOverlays.cpp
src/video/shaders/: anaglyph_gl2.frag  anaglyph_gl3.frag  passthrough_gl2.vert  (+2 more)
tests/: CMakeLists.txt  test_audio_helpers.cpp  test_audio_pipeline.cpp  test_callback_drain.cpp  test_callback_policy.cpp  test_concurrent_shutdown.cpp  test_crash_handler.cpp  test_d3d11_backend.cpp  test_event_router.cpp  test_event_router_lifecycle.cpp  test_ggml_backend_selection.cpp  test_ggml_gui_settings.cpp  test_ggml_helpers.cpp  test_ggml_lifecycle.cpp  test_ggml_model_presets.cpp  test_ggml_script_source.cpp  test_ggml_session.cpp  test_ggml_types.cpp  test_gl.cpp  test_gl_context_loss.cpp  test_gl_ops.cpp  test_media_helpers.cpp  test_media_library_helpers.cpp  test_midi_analysis.cpp  test_midi_bridge.cpp  test_midi_playback.cpp  test_midi_report.cpp  test_module_state_seams.cpp  test_mux_helpers.cpp  test_mux_join_timeout.cpp  test_nle_edit_ops.cpp  test_nle_edl_export.cpp  test_nle_sequence.cpp  test_nle_timecode.cpp  test_nle_trim_ops.cpp  test_nle_undo.cpp  test_playlist.cpp  test_playlist_helpers.cpp  test_recording_helpers.cpp  test_ring_buffer.cpp  (+8 more)
tests/benchmarks/: CMakeLists.txt  README.md  benchmark_memory.cpp  benchmark_playback.cpp  benchmark_recording.cpp
tests/fuzz/: CMakeLists.txt  README.md  fuzz_m3u_parser.cpp  fuzz_midi_parser.cpp  fuzz_xspf_parser.cpp
tests/fuzz/corpus/m3u/: sample1.m3u  sample2.m3u
tests/fuzz/corpus/midi/: minimal.mid
tests/fuzz/corpus/xspf/: sample1.xspf  sample2.xspf
tests/integration/: CMakeLists.txt  README.md  test_integration_playback.cpp  test_integration_recording.cpp
tests/stubs/: ofMain.h  ofSoundBuffer.h
tests/stubs/GLFW/: glfw3.h
tests/stubs/vlc/: vlc.h
tests/stubs_gl/: ofMain.h
tests/stubs_gl/GLFW/: glfw3.h
tests/stubs_router/: VlcCoreSession.h  ofxVlc4.h  ofxVlc4Impl.h
tests/stubs_router/vlc/: vlc.h
(+1 files in other folders)
